syntax = "proto3";

package users.map_data;

import "google/protobuf/empty.proto";

message MapDataResponse {
    repeated string streets = 1;
    repeated string houses = 2;
}

service MapDataService {
    rpc GetMapData(google.protobuf.Empty) returns (MapDataResponse);
}
